[tool.poetry]
name = "rip"
version = "0.1.0"
authors = ["Sergey Tsoy <tsoy.sergey@hotmail.com>"]
description = ""

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
python-multipart = "^0.0.5"
pydantic = {extras = ["email"], version = "^1.8.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
gunicorn = "^20.1.0"
SQLAlchemy = "^1.4.22"
mysqlclient = "^2.0.3"
alembic = "^1.6.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
